compiler/test-data/parser/control/errors/repeat_missing_on.frel
module control.errors.repeat_missing_on

backend ListBackend {
    items : List<String> = []
}

blueprint Bad {
    with ListBackend

    repeat items { item ->
        text { item }
    }
}
